--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <footer>
       <div>© 2025 Your Name or Company. All rights reserved.</div>
-      <div><a href="PrivacyPolicy.html">Privacy Policy</a></div>
+      <div><a href="privacypolicy.html">Privacy Policy</a></div>
     </footer>
   </div>
 </body>
