--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav>
       <a href="#features">Features</a>
       <a href="#support">Support</a>
-      <a href="privacy.html">Privacy</a>
+      <a href="privacypolicy.html">Privacy</a>
     </nav>
 
     <section class="hero">
