--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav>
       <a href="#features">Features</a>
       <a href="#support">Support</a>
-      <a href="privacypolicy.html">Privacy</a>
+      <a href="PrivacyPolicy.html">Privacy</a>
     </nav>
 
     <section class="hero">
@@ -57,7 +57,7 @@
 
     <footer>
       <div>© 2025 Your Name or Company. All rights reserved.</div>
-      <div><a href="privacypolicy.html">Privacy Policy</a></div>
+      <div><a href="PrivacyPolicy.html">Privacy Policy</a></div>
     </footer>
   </div>
 </body>
