--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <section id="support">
       <h2>Support</h2>
-      <p>Email us any time: <a href="mailto:support@example.com">support@example.com</a></p>
+      <p>Email us any time: <a href="mailto:nudgetronic@gmail.com">nudgetronic@gmail.com</a></p>
     </section>
 
     <footer>
