--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -27,7 +27,7 @@
     <h2>Retention</h2>
     <p>Settings and reminders are stored on your device and can be deleted by uninstalling the app.</p>
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:support@example.com">support@example.com</a></p>
+    <p>Email: <a href="mailto:nudgetronic@gmail.com">support@nudgetronic@gmail.com</a></p>
   </div>
 </body>
 </html>
