--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <nav>
-      <a href="#features">Features</a>
+      <a href="Features">Features</a>
       <a href="#support">Support</a>
       <a href="PrivacyPolicy.html">Privacy</a>
     </nav>
