--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <nav>
-      <a href="Features">Features</a>
+      <a href="Features.html">Features</a>
       <a href="#support">Support</a>
       <a href="PrivacyPolicy.html">Privacy</a>
     </nav>
@@ -56,7 +56,7 @@
     </section>
 
     <footer>
-      <div>© 2025 Your Name or Company. All rights reserved.</div>
+      <div>Nudgetronic - Your time matter!</div>
       <div><a href="PrivacyPolicy.html">Privacy Policy</a></div>
     </footer>
   </div>
