--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </section>
 
     <footer>
-      <div>Nudgetronic - Your time matter!</div>
+      <div>Nudgetronic - Your time matters!</div>
       <div><a href="PrivacyPolicy.html">Privacy Policy</a></div>
     </footer>
   </div>
