--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Nudge – Gentle reminders to focus</title>
+  <title>Nudge – Gentle reminders to focus on what matters!</title>
   <meta name="description" content="Nudge helps you stay on task with scheduled, gentle interruptions for distracting apps.">
   <style>
     body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;color:#0f172a;background:#fff}
