--- a/Features.html
+++ b/Features.html
@@ -23,7 +23,7 @@
     <header>
       <img src="icon.png" alt="Nudge icon" />
       <div>
-        <h1>Nudge</h1>
+        <h1>Nudgetronic</h1>
         <div>Gentle reminders to focus on what matters.</div>
       </div>
     </header>
