--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
     <footer>
       <div>Nudgetronic - Your time matters!</div>
+      <div>Version 1.1</div>
       <div><a href="PrivacyPolicy.html">Privacy Policy</a></div>
     </footer>
   </div>
