--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="hero">
       <div>
         <h2 id="features">Stay on track with scheduled reminders</h2>
-        <p>Nudge lets you choose distracting apps and set friendly, timed nudges or usage limits that help you switch back to meaningful work.</p>
+        <p>Nudgetronic lets you choose distracting apps and set friendly, timed nudges or usage limits that help you switch back to meaningful work.</p>
         <ul>
           <li>Schedule reminders at times you choose</li>
           <li>Full‑screen screens (optional) to break the scroll</li>
