--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <div class="wrap">
     <header>
-      <img src="icon.png" alt="Nudge icon" />
+        <img src="Nudgetronic-Icon-1024.png" alt="App icon" style="width:64px; height:64px; border-radius:14px;" />
       <div>
         <h1>Nudgetronic</h1>
         <div>Gentle reminders to focus on what matters.</div>
