--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <nav>
       <a href="Features.html">Features</a>
-      <a href="PrivacyPolicy.html">Privacy</a>
+      <a href="PrivacyPolicy.html">Privacy Policy</a>
     </nav>
 
     <section class="hero">
