--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p><a class="btn" href="#" aria-disabled="true">TestFlight link coming soon</a></p>
       </div>
       <!-- Replace screenshot.png with a real screenshot -->
-      <img src="Nudgetronic-UI-Screenshot.png" alt="Nudgetronic App UI Screenshot" style="max-width:420px; border-radius:12px;">
+      <img src="Nudgetronic-UI.png" alt="Nudgetronic App UI Screenshot" style="max-width:420px; border-radius:12px;">
     </section>
 
     <section id="support">
