--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Nudgetronic – Gentle reminders to focus on what matters!</title>
   <meta name="description" content="Nudge helps you stay on task with scheduled, gentle interruptions for distracting apps.">
+  <link rel="icon" type="image/png" href="Nudgetronic-Rings-Icon-1024.png">
   <style>
     body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;color:#0f172a;background:#fff}
     .wrap{max-width:960px;margin:0 auto;padding:32px}
@@ -21,7 +22,7 @@
 <body>
   <div class="wrap">
     <header>
-        <img src="Nudgetronic-Icon-1024.png" alt="App icon" style="width:64px; height:64px; border-radius:14px;" />
+        <img src="Nudgetronic-Rings-Icon-1024.png" alt="App icon" style="width:64px; height:64px; border-radius:14px;" />
       <div>
         <h1>Nudgetronic</h1>
         <div>Gentle reminders to focus on what matters.</div>
