Update index.html with new content

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <!-- Replace with TestFlight link when ready -->
         <p><a class="btn" href="#" aria-disabled="true">TestFlight link coming soon</a></p>
       </div>
-      <!-- Replace screenshot.png with a real screenshot -->
-      <img src="Nudgetronic-UI.png" alt="Nudgetronic App UI Screenshot" style="max-width:210px; border-radius:12px;">
+      <!-- Updated screenshot below -->
+      <img src="Nudgetronic-UI with Photo.png" alt="Nudgetronic App UI Screenshot" style="max-width:420px; border-radius:12px;">
     </section>
 
     <section id="support">
