--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     header img{width:64px;height:64px;border-radius:14px}
     h1{font-size:28px;margin:0}
     .hero{display:flex;gap:24px;flex-wrap:wrap;align-items:center;margin:24px 0}
-    .hero img{max-width:420px;border:1px solid #e2e8f0;border-radius:12px}
+    .gallery{display:flex;gap:18px;margin-top:18px;justify-content:center}
+    .gallery img{max-width:240px;border:1px solid #e2e8f0;border-radius:12px;background:#f8fafc}
     .btn{display:inline-block;background:#2563eb;color:#fff;padding:12px 18px;border-radius:10px;text-decoration:none}
     footer{margin-top:40px;border-top:1px solid #e2e8f0;padding-top:16px;font-size:14px;color:#475569}
     nav a{margin-right:16px;color:#2563eb;text-decoration:none}
@@ -46,8 +47,11 @@
         <!-- Replace with TestFlight link when ready -->
         <p><a class="btn" href="#" aria-disabled="true">TestFlight link coming soon</a></p>
       </div>
-      <!-- Updated screenshot below -->
-      <img src="Nudgetronic-UI with Photo.png" alt="Nudgetronic App UI Screenshot" style="max-width:420px; border-radius:12px;">
+      <div class="gallery">
+        <img src="UI Screenshot1.png" alt="Nudgetronic UI Screenshot 1">
+        <img src="UI Screenshot2.png" alt="Nudgetronic UI Screenshot 2">
+        <img src="UI Screenshot3.png" alt="Nudgetronic UI Screenshot 3">
+      </div>
     </section>
 
     <section id="support">
