Update index.html with new content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Nudgetronic – Gentle reminders to focus on what matters!</title>
   <meta name="description" content="Nudge helps you stay on task with scheduled, gentle interruptions for distracting apps.">
-  <link rel="icon" type="image/png" href="Nudgetronic-Rings-Icon-2025.png">
+  <link rel="icon" type="image/jpeg" href="Nudgetronic-Rings-Icon-1025.JPG">
   <style>
     body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;color:#0f172a;background:#fff}
     .wrap{max-width:960px;margin:0 auto;padding:32px}
@@ -23,7 +23,7 @@
 <body>
   <div class="wrap">
     <header>
-        <img src="Nudgetronic-Rings-Icon-2025.png" alt="App icon" style="width:64px; height:64px; border-radius:14px;" />
+        <img src="Nudgetronic-Rings-Icon-1025.JPG" alt="App icon" style="width:64px; height:64px; border-radius:14px;" />
       <div>
         <h1>Nudgetronic</h1>
         <div>Gentle reminders to focus on what matters.</div>
@@ -48,9 +48,7 @@
         <p><a class="btn" href="#" aria-disabled="true">TestFlight link coming soon</a></p>
       </div>
       <div class="gallery">
-        <img src="UI Screenshot1.png" alt="Nudgetronic UI Screenshot 1">
-        <img src="UI Screenshot2.png" alt="Nudgetronic UI Screenshot 2">
-        <img src="UI Screenshot3.png" alt="Nudgetronic UI Screenshot 3">
+        <img src="UI Screenshot1.PNG" alt="Nudgetronic UI Screenshot 1">
       </div>
     </section>
 
@@ -66,4 +64,4 @@
     </footer>
   </div>
 </body>
-</html>
+</html>.
