Update index.html with new content

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
       </div>
       <div class="gallery">
         <img src="UI Screenshot1.PNG" alt="Nudgetronic UI Screenshot 1">
+        <img src="UI Screenshot2.PNG" alt="Nudgetronic UI Screenshot 2">
+        <img src="UI Screenshot3.PNG" alt="Nudgetronic UI Screenshot 3">
       </div>
     </section>
 
@@ -64,4 +66,4 @@
     </footer>
   </div>
 </body>
-</html>.
+</html>
