--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Nudgetronic – Gentle reminders to focus on what matters!</title>
   <meta name="description" content="Nudge helps you stay on task with scheduled, gentle interruptions for distracting apps.">
-  <link rel="icon" type="image/jpeg" href="Nudgetronic-Rings-Icon-1025.JPG">
+  <link rel="icon" type="image/jpeg" href="DoomscrollStopper_WebIcon_512.png">
   <style>
     body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;color:#0f172a;background:#fff}
     .wrap{max-width:960px;margin:0 auto;padding:32px}
