Update screenshot image in Features.html

--- a/Features.html
+++ b/Features.html
@@ -45,7 +45,7 @@
         <p><a class="btn" href="#" aria-disabled="true">TestFlight link coming soon</a></p>
       </div>
       <!-- Replace screenshot.png with a real screenshot -->
-      <img src="screenshot.png" alt="Nudge app screenshot">
+      <img src="Nudgetronic-Rings-Icon-1025.JPG" alt="Nudge app screenshot">
     </section>
 
    <footer>
