--- a/Features.html
+++ b/Features.html
@@ -21,7 +21,7 @@
 <body>
   <div class="wrap">
     <header>
-        <img src="Nudgetronic-Icon-1024.png" alt="App icon" style="width:64px; height:64px; border-radius:14px;" />
+        <img src="Nudgetronic-Rings-Icon-1025.JPG" alt="App icon" style="width:64px; height:64px; border-radius:14px;" />
       <div>
         <h1>Nudgetronic Features</h1>
         <div>Gentle reminders to focus on what matters.</div>
@@ -45,7 +45,7 @@
         <p><a class="btn" href="#" aria-disabled="true">TestFlight link coming soon</a></p>
       </div>
       <!-- Replace screenshot.png with a real screenshot -->
-      <img src="Nudgetronic-Rings-Icon-1025.JPG" alt="Nudge app screenshot">
+      <img src="UI Screenshot1.PNG" alt="Nudge app screenshot">
     </section>
 
    <footer>
