--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
           <li>Works entirely on‑device with Screen Time</li>
         </ul>
         <!-- Replace with TestFlight link when ready -->
-        <p><a class="btn" href="#" aria-disabled="true">https://apps.apple.com/gb/app/nudgetronic/id6752445547</a></p>
+        <p><a href="https://https://apps.apple.com/gb/app/nudgetronic/id6752445547" rel="noopener">
+  Download Nudgetronic on the App Store
+</a></p>
       </div>
       <div class="gallery">
         <img src="UI Screenshot1.PNG" alt="Nudgetronic UI Screenshot 1">
