Fix anchor tag in App Store download link

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
         </ul>
         <!-- Replace with TestFlight link when ready -->
         <p><a href="https://https://apps.apple.com/gb/app/nudgetronic/id6752445547" rel="noopener">
-  Download Nudgetronic on the App Store
-</a></p>
+  Download Nudgetronic on the App Store</a></p>
       </div>
       <div class="gallery">
         <img src="UI Screenshot1.PNG" alt="Nudgetronic UI Screenshot 1">
