--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <section id="support">
       <h2>Support</h2>
-      <p>Email us any time: <a href="mailto:nudgetronic@gmail.com">nudgetronic@gmail.com</a></p>
+      <p>Email us any time: <a href="mailto:jmclarenscripts@gmail.com">jmclarenscripts@gmail.com</a></p>
     </section>
 
     <footer>
