--- a/Features.html
+++ b/Features.html
@@ -42,7 +42,8 @@
           <li>Works entirely on‑device with Screen Time</li>
         </ul>
         <!-- Replace with TestFlight link when ready -->
-        <p><a class="btn" href="#" aria-disabled="true">TestFlight link coming soon</a></p>
+        <p><a href="https://apps.apple.com/gb/app/nudgetronic/id6752445547" rel="noopener">
+  Download Nudgetronic on the App Store</a></p>
       </div>
       <!-- Replace screenshot.png with a real screenshot -->
       <img src="UI Screenshot1.PNG" alt="Nudge app screenshot">
