Update download link to App Store for Nudgetronic

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li>Works entirely on‑device with Screen Time</li>
         </ul>
         <!-- Replace with TestFlight link when ready -->
-        <p><a href="https://testflight.apple.com/join/cKmV2p2w" rel="noopener">
+        <p><a href="apps.apple.com/gb/app/nudgetronic/id6752445547" rel="noopener">
   Download Nudgetronic on the App Store</a></p>
       </div>
       <div class="gallery">
